--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -11,24 +11,42 @@
     "home": "ホーム",
     "about": "紹介",
     "categories": "品類・チャネル",
-    "handbook": "標準ハンドブック",
+    "services": "事業内容",
+    "handbook": "会社の位置付け",
     "supply": "サプライ・研究開発",
     "digital": "価値連鎖のデジタル化",
     "coop": "協業モデル",
-    "founder": "創業者"
+    "founder": "代表挨拶・経営理念"
   },
   "hero": {
-    "tag": "NANJI E‑COMMERCE",
-    "title": "NANJI JAPAN 会社紹介",
-    "lead": "PDF の構図を踏襲し、テキストを背景上に重ねて表示（可読性スクリーン付与）。"
+    "tag": "南極電商日本支社",
+    "title": "NANJI JAPAN",
+    "lead": "日本の企画に、中国の生産力。"
   },
   "about": {
-    "title": "データドリブンな中国消費財リーディングブランド",
+    "title": "データ駆動な中国消費財リーディングブランド",
     "lead": "世界的な消費財企業を目指し、中国製造の成功を支援。",
     "overview": "概要",
     "overviewBody": "1998 年に「南極人」から始まり、多ブランドプラットフォームへ成長。ベーシック、インナー、ルームウェア、アウターで強み。",
     "key": "主要データ",
-    "keyBody": "FY2020 純利益は約 11 億元。スケールメリットでプラットフォームコストを低減。"
+    "keyBody": "FY2020の純利益は約11億人民元。規模の強みでプラットフォームコストを最小化。"
+  },
+  "services": {
+    "title": "事業内容",
+    "items": [
+      {
+        "title": "ワンストップ生産支援",
+        "desc": "日本のアパレルブランド向けに、企画から生産までを訪問型対応。"
+      },
+      {
+        "title": "共同開発",
+        "desc": "中国トップサプライヤーと連携し、機能性素材の開発、設計、最適化により、短リードでの商品化を実現。"
+      },
+      {
+        "title": "アパレル卸",
+        "desc": "小売向けに卸売を展開。出荷管理、掛率・決済条件設定、返品・不良対応、販促支援（サンプル貸与・商品情報データ／POP）を提供。"
+      }
+    ]
   },
   "categories": {
     "metricTitle": "消費者基数",
@@ -45,17 +63,17 @@
     ]
   },
   "handbook": {
-    "title": "NANJIDS STANDARD HANDBOOK",
-    "lead": "PDF のダークページは暗い背景で再現。右寄せの反転テキスト。",
+    "title": "会社の位置付け",
+    "lead": "NJ株式会社は中国上場企業の出資により設立されたイノベーティブなトレーディングサービス会社であり、日本の中小企業およびブランドアパレル企業に対して「ワンストップ型の訪問ソリューション」を提供しています。",
     "items": [
-      "ブランド要素",
-      "商品規格",
-      "プロモーション素材"
+      "会社概要",
+      "サービスの位置付け",
+      "コアミッション"
     ],
     "itemBodies": [
-      "ロゴ安全域・スケール、色・書体、レイアウトグリッド・余白。",
-      "タグ・ラベルの適合、サイズ・組成表示、パッケージ・印刷。",
-      "オンライン画像/動画カバー、オフライン POP/ポスター、店装・什器。"
+      "NJ株式会社は中国上場企業の出資により設立され、安定した資金力と充実した中国サプライチェーンリソースを備えた、日本市場向けのイノベーティブなトレーディングサービス・プラットフォームです。",
+      "日本の中小企業およびアパレルブランド企業向けに、企画・サンプル制作から量産・納品までを一貫して伴走する「ワンストップ型の訪問サプライチェーンソリューション」を提供します。",
+      "「新しい形の商社」をコンセプトに、日本企業にとって最も信頼できる中国サプライチェーンパートナーとなることを目指しています。"
     ]
   },
   "supply": {
@@ -106,10 +124,26 @@
     "rp2": "C&A は合弁会社利益の 40% を受領。"
   },
   "founder": {
-    "title": "Zhang Yuxiang",
-    "lead": "The Founder‘s Value: CONFIDENCE · TRUST · RELIABILITY · PARTNERSHIP"
+    "greetingTitle": "代表挨拶",
+    "greetingBody": "私たちは、中国の強力なサプライチェーンリソースと日本市場のきめ細かなニーズを深く融合させ、お客様とともに「高品質・適正価格」のアパレル商品を生み出し、日本の消費者の皆さまに「良いものを、手の届く価格で」楽しんでいただける購買体験を提供し、パートナー企業の持続的な成長価値を創出することに尽力しています。",
+    "ceoTitle": "代表取締役社長",
+    "ceoName": "張玉祥",
+    "mvTitle": "経営理念",
+    "value1": "CONFIDENCE（自信）",
+    "value2": "TRUST（信頼）",
+    "value3": "RELIABILITY（信頼性）",
+    "value4": "PARTNERSHIP（パートナーシップ）"
+  },
+  "contact": {
+    "title": "お問い合わせ",
+    "sub": "製品・サービスに関してお気軽にお問い合わせください",
+    "telLabel": "TEL.",
+    "telNumber": "080-2505-3211",
+    "hours": "受付時間：平日9：00〜17：30",
+    "note": "ゴールデンウィーク・夏季休暇・年末年始・弊社設定の休日を除く",
+    "mailCta": "メールでのお問い合わせはこちら"
   },
   "footer": {
-    "copyright": "© NANJI JAPAN · React Native (Expo) 多言語版"
+    "copyright": "© NANJI JAPAN "
   }
 }
