--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -11,16 +11,17 @@
     "home": "首页",
     "about": "介绍",
     "categories": "品类与渠道",
-    "handbook": "标准手册",
+    "services": "业务内容",
+    "handbook": "公司定位",
     "supply": "供应链&研发",
     "digital": "价值链数字化",
     "coop": "合作模式",
-    "founder": "创始人"
+    "founder": "社长致辞与经营理念"
   },
   "hero": {
-    "tag": "NANJI E‑COMMERCE",
-    "title": "NANJI JAPAN 商社介绍",
-    "lead": "参照 PDF 封面色彩与构图，文字直接叠加在背景上；遮罩提高对比度，无卡片框。"
+    "tag": "南极日本",
+    "title": "NANJI JAPAN",
+    "lead": "日本的企划，中国的生产力。"
   },
   "about": {
     "title": "南极电商是一家数据驱动的中国消费品领先品牌",
@@ -29,6 +30,23 @@
     "overviewBody": "1998 年以 南极人 起步，后成长为多品牌平台；在基础款、内衣、家居服、外套等品类长期强势。",
     "key": "关键数据",
     "keyBody": "FY2020 净利润约 11 亿元人民币；规模优势带来较低平台成本。"
+  },
+  "services": {
+    "title": "业务内容",
+    "items": [
+      {
+        "title": "一站式生产支援",
+        "desc": "面向日本服装品牌，提供从企划到生产的一站式上门服务。"
+      },
+      {
+        "title": "联合开发",
+        "desc": "与中国顶级供应商联动，通过功能性面料开发、设计与优化，实现短周期商品化。"
+      },
+      {
+        "title": "服装批发",
+        "desc": "面向零售渠道开展批发。提供出货管理、折扣与结算条件设定、退换/不良处理，以及促销支持（样品借用/商品信息数据/POP）。"
+      }
+    ]
   },
   "categories": {
     "metricTitle": "消费者基数",
@@ -45,17 +63,17 @@
     ]
   },
   "handbook": {
-    "title": "NANJIDS STANDARD HANDBOOK",
-    "lead": "对应 PDF 的深色图片页，以深色背景替代；文字反白并靠右侧排版。",
+    "title": "公司定位",
+    "lead": "NJ株式会社是由中国上市公司投资设立的创新型贸易服务公司，专注于为日本中小企业及品牌服装企业提供“一站式上门供应链解决方案”。",
     "items": [
-      "品牌要素",
-      "商品规范",
-      "传播物料"
+      "公司背景",
+      "服务定位",
+      "核心使命"
     ],
     "itemBodies": [
-      "Logo 安全区/缩放规范；色彩/字体使用；版式网格/留白。",
-      "吊牌与标签合规；尺码与成分标识；包装与印刷规范。",
-      "线上图/视频封面；线下 POP/海报；店装与道具基线。"
+      "NJ株式会社由中国上市公司投资设立，具备稳健的资金与供应链资源，是面向日本市场的创新型贸易服务平台。",
+      "专注为日本中小企业及品牌服装企业提供“一站式上门供应链解决方案”，从企划、打样到生产与交付全程陪伴。",
+      "我们以“新型商社”为定位，致力于成为日本企业最值得信赖的中国供应链合伙人。"
     ]
   },
   "supply": {
@@ -66,7 +84,7 @@
     "p2": "材料/工艺持续升级；研发—打样—量产闭环；质量追溯与抽检。"
   },
   "digital": {
-    "title": "价值链数字化",
+    "title": "核心价值",
     "blocks": [
       {
         "title": "R&D digitalization",
@@ -106,10 +124,26 @@
     "rp2": "C&A 将分享合资公司利润的 40%。"
   },
   "founder": {
-    "title": "Zhang Yuxiang",
-    "lead": "The Founder‘s Value: CONFIDENCE · TRUST · RELIABILITY · PARTNERSHIP"
+    "greetingTitle": "致辞",
+    "greetingBody": "我们致力于将中国强大的供应链资源与日本市场的精细化需求深度融合，与客户共同打造“质优价低”的精品服装，让日本消费者享受“好货不贵”的美好购物体验，为合作伙伴创造持续增长价值。",
+    "ceoTitle": "董事长",
+    "ceoName": "张玉祥",
+    "mvTitle": "经营理念",
+    "value1": "CONFIDENCE",
+    "value2": "TRUST",
+    "value3": "RELIABILITY",
+    "value4": "PARTNERSHIP"
+  },
+  "contact": {
+    "title": "联系我们",
+    "sub": "欢迎就产品和服务相关事宜随时与我们联系",
+    "telLabel": "电话",
+    "telNumber": "080-2505-3211",
+    "hours": "受理时间：工作日 9:00〜17:30",
+    "note": "黄金周、夏季休假、年末年初及本公司另行规定的休息日除外",
+    "mailCta": "点击此处通过邮件联系我们"
   },
   "footer": {
-    "copyright": "© NANJI JAPAN · 静态演示（参照 PDF 视觉 / 文本覆盖背景）"
+    "copyright": "© NANJI JAPAN"
   }
 }
