--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -26,9 +26,9 @@
   "about": {
     "title": "データ駆動な中国消費財リーディングブランド",
     "lead": "世界的な消費財企業を目指し、中国製造の成功を支援。",
-    "overview": "概要",
+    "overview": "企業沿革",
     "overviewBody": "1998 年に「南極人」から始まり、多ブランドプラットフォームへ成長。ベーシック、インナー、ルームウェア、アウターで強み。",
-    "key": "主要データ",
+    "key": "業績",
     "keyBody": "FY2020の純利益は約11億人民元。規模の強みでプラットフォームコストを最小化。"
   },
   "services": {
@@ -63,17 +63,17 @@
     ]
   },
   "handbook": {
-    "title": "会社の位置付け",
-    "lead": "NJ株式会社は中国上場企業の出資により設立されたイノベーティブなトレーディングサービス会社であり、日本の中小企業およびブランドアパレル企業に対して「ワンストップ型の訪問ソリューション」を提供しています。",
+    "title": "ミッション",
+    "lead": "Nanji Japan株式会社は中国上場企業南極電商（深証:002127）より設立された会社であります。",
     "items": [
-      "会社概要",
-      "サービスの位置付け",
-      "コアミッション"
+      "会社の設立",
+      "サービス",
+      "ビジョン"
     ],
     "itemBodies": [
-      "NJ株式会社は中国上場企業の出資により設立され、安定した資金力と充実した中国サプライチェーンリソースを備えた、日本市場向けのイノベーティブなトレーディングサービス・プラットフォームです。",
-      "日本の中小企業およびアパレルブランド企業向けに、企画・サンプル制作から量産・納品までを一貫して伴走する「ワンストップ型の訪問サプライチェーンソリューション」を提供します。",
-      "「新しい形の商社」をコンセプトに、日本企業にとって最も信頼できる中国サプライチェーンパートナーとなることを目指しています。"
+      "上場企業の出資により、安定した資金力と充実した中国サプライチェーンを備えた、日本市場向けのトレーディングサービス・プラットフォームです。",
+      "日本のアパレル企業向けに、企画・サンプル制作から量産・納品までを一貫して伴走する「ワンストップ型の訪問サプライチェーンソリューション」を提供します。",
+      "「新型商社」をコンセプトに、日本企業にとって最も信頼できる中国サプライチェーンパートナーとなることを目指しています。"
     ]
   },
   "supply": {
@@ -127,7 +127,7 @@
     "greetingTitle": "代表挨拶",
     "greetingBody": "私たちは、中国の強力なサプライチェーンリソースと日本市場のきめ細かなニーズを深く融合させ、お客様とともに「高品質・適正価格」のアパレル商品を生み出し、日本の消費者の皆さまに「良いものを、手の届く価格で」楽しんでいただける購買体験を提供し、パートナー企業の持続的な成長価値を創出することに尽力しています。",
     "ceoTitle": "代表取締役社長",
-    "ceoName": "張玉祥",
+    "ceoName": "北浦　拓実",
     "mvTitle": "経営理念",
     "value1": "CONFIDENCE（自信）",
     "value2": "TRUST（信頼）",
