--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -21,7 +21,7 @@
   "hero": {
     "tag": "南极日本",
     "title": "NANJI JAPAN",
-    "lead": "日本的企划，中国的生产力。"
+    "lead": "日本的时尚，中国的生产力。"
   },
   "about": {
     "title": "南极电商是一家数据驱动的中国消费品领先品牌",
@@ -126,8 +126,8 @@
   "founder": {
     "greetingTitle": "致辞",
     "greetingBody": "我们致力于将中国强大的供应链资源与日本市场的精细化需求深度融合，与客户共同打造“质优价低”的精品服装，让日本消费者享受“好货不贵”的美好购物体验，为合作伙伴创造持续增长价值。",
-    "ceoTitle": "董事长",
-    "ceoName": "张玉祥",
+    "ceoTitle": "法人代表",
+    "ceoName": "北浦 拓实",
     "mvTitle": "经营理念",
     "value1": "CONFIDENCE",
     "value2": "TRUST",
