Fix listing page layout

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -12,6 +12,7 @@
     "about": "About",
     "categories": "Categories & Channels",
     "services": "Services",
+    "listing": "Browse Apparels",
     "handbook": "Company",
     "supply": "Supply & R&D",
     "digital": "Digitalization",
