--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -12,6 +12,7 @@
     "about": "紹介",
     "categories": "品類・チャネル",
     "services": "事業内容",
+    "listing": "アパレル一覧",
     "handbook": "会社の位置付け",
     "supply": "サプライ・研究開発",
     "digital": "価値連鎖のデジタル化",
