--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -12,6 +12,7 @@
     "about": "介绍",
     "categories": "品类与渠道",
     "services": "业务内容",
+    "listing": "服装列表",
     "handbook": "公司定位",
     "supply": "供应链&研发",
     "digital": "价值链数字化",
